# USBMux

./: .gitignore  README.md  pyproject.toml
firmware/: Makefile  libopencm3-stm32f042-usb-fix.patch  linker.ld
firmware/src/: commands.c  commands.h  gpio.c  gpio.h  main.c  usb_cdc.c  usb_cdc.h
hardware/: USBMux.kicad_pcb  USBMux.kicad_prl  USBMux.kicad_pro  USBMux.kicad_sch
software/: usbmux.py
usbmux/: __init__.py  device.py
