[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usbmux"
version = "0.1.0"
authors = [
    {name = "Marvin Sass"},
]
description = "Python library for controlling USBMux USB multiplexer device"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyserial",
]

[project.urls]
"Homepage" = "https://github.com/HWS-XMS/USBMux"
"Bug Reports" = "https://github.com/HWS-XMS/USBMux/issues"
"Source" = "https://github.com/HWS-XMS/USBMux"

[tool.setuptools.packages.find]
where = ["."]
include = ["usbmux*"]

[tool.setuptools.package-data]
usbmux = ["*.md"]